# Object-Oriented-C-

./: README.md
12_qt_testing/: 12_qt_testing.pro
12_qt_testing/fromlab11/: fromlab11.cpp  fromlab11.h  fromlab11.pro  fromlab11_global.h
12_qt_testing/tests/: tests.pro
12_qt_testing/utils/: demo.cpp  demo.h  utils.pro
Lab1/: CMakeLists.txt  test.cpp
Lab1/include/: nothing.h
build-10_state_machine-Desktop-Debug/: 10_state_machine  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-11_qml-Desktop-Debug/: 11_qml  Makefile  moc_acceleration.cpp  moc_displacement.cpp  moc_speed.cpp  qrc_qml.cpp
build-12_qt_testing-Desktop-Debug/: Makefile
build-12_qt_testing-Desktop-Debug/cli/: Makefile  cli
build-12_qt_testing-Desktop-Debug/fromlab11/: Makefile  libfromlab11.so.1  libfromlab11.so.1.0.0  moc_acceleration.cpp  moc_displacement.cpp  moc_speed.cpp
build-12_qt_testing-Desktop-Debug/tests/: Makefile
build-12_qt_testing-Desktop-Debug/utils/: Makefile  libutils.so.1.0.0  moc_demo.cpp
lab1/: CMakeLists.txt
lab1/src/: main.cpp  nothing.cpp
lab10/: mainwindow.cpp  mainwindow.ui
lab13/lab13/: connection.cpp  connection.h  lab13.pro  main.cpp  mainwindow.ui  server.cpp  server.h
lab5/: readme.md
lab5/bench/: CMakeLists.txt
lab5/bench/src/: LargeBench.cpp  MapBench.cpp  MapBenchLarge.cpp  MapBenchMedium.cpp  MediumBench.cpp  PauseAndResumeBench.cpp  SmallBench.cpp  UnorderedMultisetBench.cpp  UnorderedMultisetBenchLarge.cpp  UnorderedMultisetBenchMedium.cpp  VectorBench.cpp  VectorBenchLarge.cpp  VectorBenchMedium.cpp
lab8/: CMakeLists.txt
(+99 files in other folders)
